Add dependencies for removed modules in Java 11.